<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">settings2</string>
	<string name="app_name2">Connections</string>
	<string name="app_name3">My Device</string>
	<string name="app_name4">Accounts</string>
	<string name="app_name5">More</string>
	<string name="tab1">Connections</string>
	<string name="tab2">My Device</string>
	<string name="tab3">Accounts</string>
	<string name="tab4">More</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="radio_spacecake">Wireless &amp; Networks</string>
    <string name="spacecake_device">Device</string>
    <string name="spacecake_interface">Interface</string>
    <string name="spacecake_personal">Personal</string>
    <string name="spacecake_system">System</string>
    <string name="spacecake_more">More...</string>
    <string name="spacecake_rom">ROM Settings</string>
    <string name="spacecake_battery">Battery</string>	
	<string name="spacecake_accounts">Accounts</string>	
	<string name="data_quick_toggle_title">Mobile Data</string>
	<string name="sound_settings_title">Sound</string>
    <string name="display_settings_title">Display</string>
    <string name="storage_settings">SD card and phone storage</string>
    <string name="power_saving">Power Saving</string>
    <string name="applications_settings">Applications</string>
    <string name="privacy_settings">Privacy</string>
    <string name="language_settings">Locale and text</string>	
    <string name="security_settings_title">Location and security</string>
    <string name="sync_settings">Accounts and sync</string>
    <string name="add_account">Add Account</string>
    <string name="voice_input_output_settings">Voice input and output</string>
    <string name="call_settings_title">Call settings</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="development_title">Development</string>
    <string name="date_and_time_settings_title">Date and time</string>
    <string name="about_settings">About phone</string>
    <string name="settings_label_launcher">Settings</string>	
</resources>

